# kiwi

./: .gitignore  AGENTS.md  MANIFEST.md  README.md  TODO.md  agent  config.toml  cw-frequency  presets.toml  pyproject.toml  rna-signals.csv  sdr  setup-python
.pi/prompts/: fixture-capture.md  harness-test.md  live-radio-test.md  protocol-spike.md  review-slice.md  slice.md
.pi/skills/kiwisdr-client/: SKILL.md
docs/: architecture.md  audio-pipeline.md  beacon-detection.md  bumpless-transfer.md  dev-log.md  harness.md  kiwi-protocol.md  ndb-tuning-dial.md  project-brief.md  radio-lab.md  radio-parameters.md  radio-session-state.md  roadmap.md  terminal-waterfall-renderer.md  test-plan.md  user-guide.md  waterfall-rendering.md  waterfall-spec.md
src/kiwi_client/: __init__.py  audio.py  capture.py  client_app.py  commands.py  config.py  fixtures.py  live_capture.py  live_play.py  live_record.py  live_waterfall.py  live_waterfall_preview.py  live_worker.py  playback.py  protocol.py  receiver_model.py  recorder.py  state_store.py  system_volume.py  transport.py  tui.py  waterfall.py  waterfall_preview.py  waterfall_render.py
tests/audio/: README.md  test_playback.py  test_snd_sequence.py  test_wav_recorder.py
tests/detection/: README.md
tests/fixtures/kiwi/: README.md  client-5000-am.jsonl  (+8 more)
tests/harness/: README.md  test_capture_writer.py  test_client_app.py  test_config.py  test_fixtures.py  test_live_capture.py  test_live_play.py  test_live_record.py  test_live_waterfall.py  test_live_waterfall_preview.py  test_live_worker.py  test_local_snd_capture.py  test_local_wf_capture.py  test_replay_transport.py  test_snd_session.py  test_snd_setup_commands.py  test_state_store.py  test_system_volume.py  test_tui.py  test_waterfall_image_tool.py  test_waterfall_preview.py  test_waterfall_render.py
tests/protocol/: README.md  test_commands.py  test_msg.py  test_snd.py  test_waterfall.py
tests/waterfall/: README.md
tools/: waterfall_image.py
(+1 files in other folders)
