[project]
name = "kiwi-client"
version = "0.1.0"
description = "Fixture-first KiwiSDR client experiments"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
live = [
    "websockets>=12",
]

[project.scripts]
kiwi-snd-capture = "kiwi_client.live_capture:main"
kiwi-fixture-to-wav = "kiwi_client.recorder:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
