[project]
name = "kiwi-client"
version = "0.1.0"
description = "Fixture-first KiwiSDR client experiments"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
live = [
    "websockets>=12",
]
playback = [
    "sounddevice>=0.4",
]

[project.scripts]
kiwi-client = "kiwi_client.client_app:main"
kiwi-tui = "kiwi_client.tui:main"
kiwi-snd-capture = "kiwi_client.live_capture:main"
kiwi-snd-record = "kiwi_client.live_record:main"
kiwi-snd-play = "kiwi_client.live_play:main"
kiwi-fixture-to-wav = "kiwi_client.recorder:main"
kiwi-play-wav = "kiwi_client.playback:main"
kiwi-wf-preview = "kiwi_client.waterfall_preview:main"
kiwi-wf-capture = "kiwi_client.live_waterfall:main"
kiwi-wf-live = "kiwi_client.live_waterfall_preview:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
